Fix a tile flickering and handle empty user session

--- a/Client/css/match.css
+++ b/Client/css/match.css
@@ -4,6 +4,10 @@
     /*padding: 5%;*/
 }
 
+div.hidden {
+    display: none;
+}
+
 #tinderslide {
     position: relative;
     /*background: #fff;*/
